# Aether

./: LICENSE  README.md  minimal_cfs_agent.py
cfs_mcp_server/: IMPLEMENTATION_SUMMARY.md  README.md  cfs_agent_integration.py  test_cfs_mcp.py  test_windows.py
cfs_mcp_server/cfs_app/: CMakeLists.txt  mcp_command_handlers.c  mcp_interface_app.c  mcp_interface_app.h  mcp_interface_version.h.in  mcp_safety_utils.c
cfs_mcp_server/config/: cfs_config.json
cfs_mcp_server/python_server/: main.py  requirements.txt  simple_mcp_server.py  windows_mcp_server.py
